# sandbox

./: .gitignore  Makefile  README.md  codebook.toml
sandbox_std/: .rustc_info.json  Cargo.toml  Makefile  задачи.md
sandbox_std/docs/doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
sandbox_std/exa_astar/: Cargo.toml
sandbox_std/exa_astar/src/: lib.rs
sandbox_std/exa_dijkstras/: Cargo.toml
sandbox_std/exa_dijkstras/src/: lib.rs
sandbox_std/exa_search/: Cargo.toml
sandbox_std/exa_search/src/: lib.rs
sandbox_std/exa_sort/: Cargo.toml
sandbox_std/exa_sort/benches/: benchmark_sort.rs
sandbox_std/exa_sort/src/: lib.rs
sandbox_std/exa_std/: Cargo.toml
sandbox_std/exa_std/src/: convert_to_array_bits.rs  exp_arc.rs  exp_box.rs  exp_cell.rs  exp_cow.rs  exp_mutex.rs  exp_rc.rs  exp_refcell.rs  exp_rwlock.rs  lib.rs
sandbox_std/exp_dijkstras/: Cargo.toml
sandbox_std/exp_dijkstras/src/: lib.rs
sandbox_std/exp_search/: Cargo.toml
sandbox_std/exp_search/src/: lib.rs
sandbox_std/exp_sort/: Cargo.toml
sandbox_std/exp_sort/benches/: benchmark_sort.rs
sandbox_std/exp_sort/src/: lib.rs
sandbox_std/exp_std/: Cargo.toml
sandbox_std/exp_std/src/: convert_to_array_bits.rs  exp_any.rs  exp_box.rs  exp_cell.rs  exp_cow.rs  lib.rs
sandbox_std/fibonacci/: Cargo.toml
sandbox_std/fibonacci/benches/: fibonacci.rs
sandbox_std/fibonacci/src/: cycle.rs  iterator.rs  lib.rs  recursion.rs
sandbox_std/rand_iterator/: Cargo.toml
sandbox_std/rand_iterator/benches/: rand_iterator.rs
sandbox_std/rand_iterator/src/: func.rs  lib.rs  (+4 more)
(+68 files in other folders)
